# Epidemic1

./: CMakeLists.txt  README.md  epidemic.cpp  epidemic.hpp  epidemic.test.cpp  main.cpp  prova.cpp  prove.cpp  relazione.tex
curve/: curve.cpp  curve.hpp
epidemic/: epidemic.cpp  epidemic.hpp  epidemic.test.cpp
epidemic/graph/: graph.cpp
graph/: draw.cpp  draw.hpp  graph.hpp
graph/axis/: axis.cpp  axis.hpp
graph/background/: background.cpp  background.hpp
graph/curves/: curves.cpp  curves.hpp  draw.cpp
graph/grid/: grid.cpp  grid.hpp
graph/key/: key.cpp  key.hpp
graph/text/: text.cpp  text.hpp
result/: result.cpp  result.hpp
